[package]
name = "envault"
description = "A tool for managing secrets"
version = "0.0.3"
repository = "https://github.com/kentrino/envault"
authors = ["Kento Haneda <kento@hane.dad>"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
thiserror = "1.0.52"
serde_yaml = "0.9.29"
once_cell = "1.19.0"

hmac = "0.12.1"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["std"]}
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = "0.21.5"
