[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["std"]}
rand = "0.8.5"

base64 = "0.21.5"
thiserror = "1.0.52"
rand_chacha = "0.3.1"
