[package]
name = "envault-processor"
description = "Cipher library for envault"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/kentrino/envault"
authors = ["Kento Haneda <kento@hane.dad>"]
license = "MIT"

[dependencies]
envault-cipher = { path = "../cipher", version = "0.0.1" }

serde_yaml = "0.9.29"
thiserror = "1.0.52"
rand_chacha = "0.3.1"
rand = "0.8.5"

once_cell = "1.19.0"
